--- a/tugasjs.js/htmljs1.html
+++ b/tugasjs.js/htmljs1.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<meta charset="utf-8">
-<title>Eksternal Javascript</title>
+    <meta charset="utf-8">
+    <title>Eksternal Javascript</title>
 </head>
+
 <body>
 
-    <script src="htmljs1.js"> Latihan Javascript </script>
+    <script src="htmljs1.js">
+        Latihan Javascript dan menghubungkan Vscode ke GitHub
+    </script>
 
 </body>
+
 </html>
