--- a/tugasjs.js/htmljs1.html
+++ b/tugasjs.js/htmljs1.html
@@ -9,7 +9,7 @@
 <body>
 
     <script src="htmljs1.js">
-        Latihan Javascript dan menghubungkan Vscode ke GitHub
+        Latihan Javascript dan menghubungkan Vscode ke GitHub percobaan pertama
     </script>
 
 </body>
