--- a/tugasjs.js/htmljs1.html
+++ b/tugasjs.js/htmljs1.html
@@ -9,7 +9,7 @@
 <body>
 
 
-    Latihan menghubungkan Vscode ke GitHub percobaan pertama
+    Latihan menghubungkan Vscode ke GitHub percobaan kedua
 
 
 </body>
