percobaan edit terakihir

--- a/tugasjs.js/htmljs1.html
+++ b/tugasjs.js/htmljs1.html
@@ -9,7 +9,7 @@
 <body>
 
 
-    Latihan menghubungkan Vscode ke GitHub percobaan kedua
+    Latihan menghubungkan Vscode ke GitHub percobaan edit terakihir
 
 
 </body>
